# openGlLabs

./: .gitignore  README.md
template/: Makefile  main.cpp  nocompile-sample.cpp
testing/: .gitignore  App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  IDrawtickable.cpp  IDrawtickable.h  Keyboard.cpp  Keyboard.h  Makefile  Mouse.cpp  Mouse.h  MyObject.cpp  MyObject.h  Texture.cpp  Texture.h  astyle.sh  build.sh  lab4.cpp  lab4.h  lab5.cpp  lab5.h  main.cpp
testing/inc/: dmessage.h  inc.h
